# monad-next

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  cargo-test-workspace-results  install.sh  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: action-selftest.yml  ci.yml  e2e.yml  homebrew-bump.yml  release.yml
crates/monad-adapters/: Cargo.toml
crates/monad-adapters/src/: adapter.rs  bun.rs  cargo.rs  cloudflare_pages.rs  cloudflare_worker.rs  deno.rs  diagnostic.rs  diagnostic_record.rs  go.rs  gradle.rs  integration.rs  lib.rs  linear.rs  maven.rs  node_common.rs  node_npm.rs  php.rs  plugin_adapter.rs  plugin_search.rs  pnpm.rs  probe.rs  python.rs  python_uv.rs  railway.rs  registry.rs  ruby.rs  slack.rs  tool_versions.rs  vercel.rs  yarn.rs
crates/monad-adapters/tests/: plugin_e2e.rs
crates/monad-cache/: Cargo.toml
crates/monad-cache/src/: key.rs  lib.rs  local.rs  manifest.rs  remote.rs  remote_api.rs  remote_bearer.rs  token.rs
crates/monad-cache/tests/: remote_bearer_roundtrip.rs
crates/monad-cas-protocol/: Cargo.toml
crates/monad-cas-protocol/src/: lib.rs
crates/monad-cli/: Cargo.toml
crates/monad-cli/src/: artifacts.rs  cli.rs  errors.rs  init.rs  linear_notify.rs  login.rs  main.rs  mcp.rs  plan_print.rs  plugins.rs  prime.rs  release.rs  run_print.rs  scaffold.rs  schema.rs  secret.rs  slack_post.rs  style.rs  toolchain.rs  why.rs
crates/monad-cli/src/migrate/: lerna.rs  make.rs  mod.rs  moon.rs  nx.rs  rush.rs  turbo.rs
crates/monad-cli/tests/: e2e.rs
crates/monad-cli/tests/e2e/: bun.rs  cargo.rs  common.rs  container.rs  deno.rs  deploy.rs  go.rs  gradle.rs  maven.rs  migrate.rs  monorepo_cargo_pnpm.rs  monorepo_dep_cascade.rs  monorepo_go_node.rs  node_npm.rs  node_pnpm.rs  node_yarn.rs  php.rs  python.rs  ruby.rs
crates/monad-config/: Cargo.toml
crates/monad-config/src/: error.rs  lib.rs  schema.rs  workspace.rs
crates/monad-core/: Cargo.toml
crates/monad-core/src/: artifacts.rs  cascade.rs  deploy_state.rs  diff.rs  discovery.rs  doctor.rs  garnish.rs  graph.rs  inventory.rs  lib.rs  notification.rs  plan.rs  prime.rs  report.rs  run.rs  why.rs
crates/monad-core/src/diagnostic_parsers/: cargo_message.rs  eslint.rs  golangci_lint.rs  mod.rs  ruff.rs
crates/monad-mcp/: Cargo.toml
crates/monad-mcp/src/: main.rs  workspace_ctx.rs
crates/monad-plugin/: Cargo.toml
crates/monad-plugin/src/: client.rs  framing.rs  lib.rs  protocol.rs  wire.rs
crates/monad-plugin/tests/: fixture.rs
crates/monad-toolchain/: Cargo.toml
crates/monad-toolchain/src/: go.rs  installer.rs  lib.rs  node.rs  python.rs  resolver.rs  store.rs  target.rs  tool.rs  uv.rs
crates/monad-watch/: Cargo.toml
crates/monad-watch/src/: lib.rs
docs/: adopt-existing-repo.md  agents.md  configuration.md  deploying.md  new-project.md  plugins.md
docs/architecture/: MONAD-VOCABULARY-AND-DOMAIN-MODEL.md
examples/monad-adapter-noop/: Cargo.toml
examples/monad-adapter-noop/src/: lib.rs  main.rs
scripts/action/: run.sh
skills/monad/: SKILL.md
skills/monad/hooks/: monad-guard.sh
tests/e2e/fixtures/action-selftest-bun/: monad.toml
tests/e2e/fixtures/action-selftest-bun/profiles/: prod.toml
tests/e2e/fixtures/action-selftest-bun/service/: package.json  unit.toml
tests/e2e/fixtures/action-selftest-python-uv/: monad.toml
tests/e2e/fixtures/action-selftest-python-uv/service/: pyproject.toml  unit.toml
tests/e2e/fixtures/bun-hello/: hello.test.ts  package.json
tests/e2e/fixtures/cargo-hello/: Cargo.toml
tests/e2e/fixtures/cargo-hello/src/: lib.rs  main.rs
tests/e2e/fixtures/container-go/: .gitignore  monad.toml
tests/e2e/fixtures/container-go/app/: go.mod  main.go  unit.toml
tests/e2e/fixtures/container-go/profiles/: prod.toml
tests/e2e/fixtures/deno-hello/: deno.json  main.ts  main_test.ts
tests/e2e/fixtures/deploy-railway/: monad.toml
tests/e2e/fixtures/deploy-railway/app/: railway.toml  unit.toml
tests/e2e/fixtures/go-hello/: go.mod  main.go  main_test.go
tests/e2e/fixtures/gradle-hello/: build.gradle  gradlew  settings.gradle
tests/e2e/fixtures/maven-hello/: pom.xml
tests/e2e/fixtures/migrate-lerna/: lerna.json  package.json
tests/e2e/fixtures/migrate-make/: Makefile  README.md
tests/e2e/fixtures/migrate-moon/: README.md
tests/e2e/fixtures/migrate-moon/.moon/: workspace.yml
tests/e2e/fixtures/migrate-moon/apps/api/: moon.yml
tests/e2e/fixtures/migrate-moon/apps/web/: moon.yml
tests/e2e/fixtures/migrate-rush/: README.md  rush.json
tests/e2e/fixtures/migrate-rush/apps/api/: package.json
tests/e2e/fixtures/migrate-rush/apps/web/: package.json
tests/e2e/fixtures/monorepo-cargo-pnpm/: monad.toml
tests/e2e/fixtures/monorepo-cargo-pnpm/api/: Cargo.toml  unit.toml
tests/e2e/fixtures/monorepo-cargo-pnpm/api/src/: lib.rs  main.rs
tests/e2e/fixtures/monorepo-cargo-pnpm/profiles/: prod.toml
tests/e2e/fixtures/monorepo-cargo-pnpm/web/: package.json  unit.toml
tests/e2e/fixtures/monorepo-dep-cascade/: monad.toml
tests/e2e/fixtures/monorepo-dep-cascade/a/: go.mod  main.go  unit.toml
tests/e2e/fixtures/monorepo-dep-cascade/b/: go.mod  main.go  unit.toml
tests/e2e/fixtures/monorepo-dep-cascade/profiles/: prod.toml
tests/e2e/fixtures/monorepo-go-node/: monad.toml
tests/e2e/fixtures/monorepo-go-node/backend/: go.mod  main.go  main_test.go  unit.toml
tests/e2e/fixtures/monorepo-go-node/frontend/: package-lock.json  package.json  unit.toml
tests/e2e/fixtures/monorepo-go-node/frontend/src/: index.js
tests/e2e/fixtures/monorepo-go-node/profiles/: prod.toml
tests/e2e/fixtures/node-npm-hello/: package-lock.json  package.json
tests/e2e/fixtures/node-pnpm-hello/: package.json
tests/e2e/fixtures/node-yarn-hello/: package.json
tests/e2e/fixtures/php-hello/: composer.json
tests/e2e/fixtures/php-hello/src/: hello.php
tests/e2e/fixtures/python-hello/: pyproject.toml
tests/e2e/fixtures/python-hello/src/python_hello/: __init__.py
tests/e2e/fixtures/ruby-hello/: Gemfile  hello.rb
(+2 files in other folders)
