[package]
name = "monad-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "monad — polyglot monorepo orchestrator (CLI)"
readme = "../../README.md"

[[bin]]
name = "monad"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
toml_edit.workspace = true
toml.workspace = true
semver.workspace = true
thiserror.workspace = true
schemars.workspace = true
monad-core.workspace = true
monad-config.workspace = true
monad-cache.workspace = true
monad-adapters.workspace = true
monad-watch.workspace = true
globset.workspace = true
walkdir.workspace = true
ureq.workspace = true
# Used by `monad mcp install` to resolve user-home + per-OS Claude
# Desktop / Cursor / Windsurf config paths.
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
# e2e harness deps — used by `tests/e2e/*` integration tests.
serde_json.workspace = true
which = "6"
