[package]
name = "monad-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "MCP (Model Context Protocol) server for monad — exposes the CLI verb surface as typed tools for Claude Desktop, Claude Code, and any other MCP client."

[[bin]]
name = "monad-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

# MCP SDK. `macros` + `server` + `transport-io` is enough to declare
# tools and speak stdio JSON-RPC.
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }

monad-core.workspace = true
monad-config.workspace = true

[dev-dependencies]
tempfile.workspace = true
