[package]
name = "monad-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Subprocess plugin host: JSON-RPC over stdio for out-of-process monad language adapters"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "monad-plugin-fixture"
path = "src/bin/fixture.rs"
