[package]
name = "monad-watch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "monad file watcher for `monad serve` and `monad dev`"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
notify.workspace = true
globset.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
